# hiveflow

./: .gitignore  Cargo.toml
examples/hiveflow-simple/: Cargo.toml
examples/hiveflow-simple/src/: main.rs
hiveflow-core/: Cargo.toml
hiveflow-core/src/core/: macros.rs  mod.rs  pipeline.rs  task.rs
hiveflow-core/tests/core/: composition.rs  dummy_tasks.rs  flow.rs  macros.rs  mod.rs  parallel.rs  sequential.rs
hiveflow-macros/: Cargo.toml
hiveflow-macros/src/: generate.rs  lib.rs  parser.rs
hiveflow-macros/src/flow/: generate.rs  parser.rs
hiveflow-macros/src/parallel/: generate.rs  parser.rs
hiveflow-macros/src/sequential/: generate.rs  mod.rs  parser.rs
