[package]
name = "hiveflow-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
hiveflow-core = { path = "../../hiveflow-core" }
hiveflow-macros = { path = "../../hiveflow-macros" }
async-trait = "0.1.88"
reqwest = { version = "0.12.22", features = ["json"] }
futures = "0.3.31"
tokio = "1.46.1"
